Included images webpack test in project

--- a/assets/src/index.ejs
+++ b/assets/src/index.ejs
@@ -16,6 +16,6 @@
 </head>
 <body>
   <div id="form"></div>
-  <div onclick="myFunction()" class="button">CLICK BE!</div>
+  <div onclick="myFunction()" class="button">CLICK ME!</div>
 </body>
 </html>
