Added scripts to bundle only some sass files

--- a/assets/src/styles/components/forms.scss
+++ b/assets/src/styles/components/forms.scss
@@ -3,7 +3,7 @@
     .btn {
         background: transparent;
         box-shadow: none;
-        border: 1px solid #ddd;
+        border: 1px solid #000;
         padding: 10px 30px;
         font-size: 20px;
         cursor: pointer;
